--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 
 <header th:replace="layout::site-header"/>
 
-<h1>This is the index</h1>
+<h1>Yeah this is the index!</h1>
 Now is <b th:text="${execInfo.now.time}"></b>
 
 <footer th:replace="layout::site-footer"/>
