--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,20 +9,20 @@
 <header th:fragment="site-header">
     <div class="navbar-default navbar">
         <div class="container-fluid">
-            <a href="index.html" th:href="@{/}"><img src="../public/img/site-logo.png" th:src="@{/img/site-logo.png}"/></a>
-            <a href="index.html" th:href="@{/}">Home</a>
-            <a href="users/login.html" th:href="@{/users/login}">Login</a>
-            <a href="users/register.html" th:href="@{/users/register}">Register</a>
-            <a href="posts/index.html" th:href="@{/posts}">Posts</a>
-            <a href="posts/create.html" th:href="@{/posts/create}">Create Post</a>
-            <a href="users/index.html" th:href="@{/users}">Users</a>
-            <div class="nav navbar-nav navbar-right" id="logged-in-info"><span>Hello, <b>(user)</b></span>
-                <form class="form-inline" method="post" th:action="@{/users/logout}">
-                    <div class="form-group">
-                        <button class="btn btn-default" type="submit"> Sign in </button>
-                    </div>
-                </form>
-            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="index.html" th:href="@{/}"><img src="../public/img/site-logo.png" th:src="@{/img/site-logo.png}"/></a></li>
+                <li><a href="index.html" th:href="@{/}">Home</a></li>
+                <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
+                <li><a href="users/register.html" th:href="@{/users/register}">Register</a></li>
+                <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
+                <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
+                <li><a href="users/index.html" th:href="@{/users}">Users</a></li>
+            </ul>
+
+            <form class="navbar-form navbar-right" method="post" th:action="@{/users/logout}">
+                <span>Hello, <b>(user)</b></span>
+                <button class="btn btn-default" type="submit"> Sign in</button>
+            </form>
 
         </div>
     </div>
