--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,30 +7,47 @@
 </head>
 <body>
 <header th:fragment="site-header">
-    <div class="navbar-default navbar">
-        <div class="container-fluid">
-            <a href="index.html" th:href="@{/}"><img src="../public/img/site-logo.png" th:src="@{/img/site-logo.png}"/></a>
-            <a href="index.html" th:href="@{/}">Home</a>
-            <a href="users/login.html" th:href="@{/users/login}">Login</a>
-            <a href="users/register.html" th:href="@{/users/register}">Register</a>
-            <a href="posts/index.html" th:href="@{/posts}">Posts</a>
-            <a href="posts/create.html" th:href="@{/posts/create}">Create Post</a>
-            <a href="users/index.html" th:href="@{/users}">Users</a>
-            <div class="nav navbar-nav navbar-right" id="logged-in-info"><span>Hello, <b>(user)</b></span>
-                <form class="form-inline" method="post" th:action="@{/users/logout}">
-                    <div class="form-group">
-                        <button class="btn btn-default" type="submit"> Sign in </button>
-                    </div>
-                </form>
-            </div>
 
-        </div>
-    </div>
+    <!-- Static navbar -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" th:href="@{/}">SPRING MVC BLOG</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="index.html" th:href="@{/}">Home</a></li>
+                    <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
+                    <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
+                    <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
+                    <li><a href="users/index.html" th:href="@{/users}">Users</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li id="logged-in-info" class="active">Hello <b>(user)</b> <span class="sr-only">(current)</span></li>
+                    <form class="form-inline" method="post" th:action="@{/users/logout}">
+                        <div class="form-group">
+                            <button class="btn btn-default" type="submit"> Sign in </button>
+                        </div>
+                    </form>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+    </nav>
+
 
 
 </header>
-<footer th:fragment="site-footer">
-    &copy; Spring MVC Blog System, 2016
-</footer>
+<div class="panel panel-default" th:fragment="site-footer">
+    <div class="panel-footer">
+        &copy; Spring MVC Blog System, 2016
+    </div>
+</div>
 </body>
 </html>
