--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,30 +6,33 @@
 <body>
 
 <header th:replace="layout::site-header"/>
-
 <div class="container">
 
     <div class="col-lg-8">
         <!-- Blog Post -->
-        <div class="col-lg-12" th:each="p : ${latest3post}">
+        <div class="col-lg-12" th:each="p : ${latest3posts}">
+
             <!-- Title -->
             <h1 th:text="${p.title}">Post Title</h1>
 
             <!-- Author -->
             <p class="lead">
-                by <a href="#">Start Bootstrap</a>
+                by
+                <a href="#" th:if="${p.author}" th:text="${p.author.fullName != null ? p.author.fullName : p.author.username}">
+                Start Bootstrap
+                </a>
             </p>
 
             <hr />
 
             <!-- Date/Time -->
-            <p><span class="glyphicon glyphicon-time"></span> Posted on August 24, 2013 at 9:00 PM</p>
+            <p><span class="glyphicon glyphicon-time"></span> Posted on <b th:text="${#dates.format(p.date, 'dd-MMM-yyyy')}">24, 2013 at 9:00 PM</b></p>
 
             <hr />
 
             <!-- Post Content -->
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-            <p th:utext>Post Content</p>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati</p>
+            <p th:utext="${p.body}">Post Content</p>
 
             <hr />
 
@@ -38,18 +41,11 @@
 
     <div class="col-md-4">
         <div class="well">
-            <h4>Blog Categories</h4>
+            <h4>Recent Posts</h4>
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-unstyled">
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
-                        <li><a href="#">Category Name</a>
-                        </li>
+                    <ul class="list-unstyled" th:each="p : ${latest5posts}">
+                        <li><a href="@{/posts/view/{id}/(id=${p.id})}" th:text="${p.title}">Post Name</a></li>
                     </ul>
                 </div>
 
