--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,8 +22,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="index.html" th:href="@{/}">Home</a></li>
+                    <li class="active"><a href="index.html" th:href="@{/}">Home</a></li>
                     <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
                     <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
                     <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
