Intento de Custom 404 fallido :(

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
             <!-- Author -->
             <p class="lead">
                 by
-                <a href="#" th:if="${p.author}" th:text="${p.author.fullName != null ? p.author.fullName : p.author.username}">
+                <a href="#" th:if="${p.author}" th:remove="tag" th:text="${p.author.fullName != null ? p.author.fullName : p.author.username}">
                 Start Bootstrap
                 </a>
             </p>
