--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,26 +9,25 @@
 </head>
 <body>
 <header th:fragment="site-header">
-    <div class="navbar-default navbar">
-        <div class="container-fluid">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html" th:href="@{/}"><img src="../public/img/site-logo.png" th:src="@{/img/site-logo.png}"/></a></li>
+
+    <div class="nav-bar">
+            <ul>
+                <li><a href="index.html" th:href="@{/}"><img src="site-logo.png"/></a></li>
                 <li><a href="index.html" th:href="@{/}">Home</a></li>
                 <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
                 <li><a href="users/register.html" th:href="@{/users/register}">Register</a></li>
                 <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
                 <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
                 <li><a href="users/index.html" th:href="@{/users}">Users</a></li>
+                <li class="right">
+                    <form method="post" th:action="@{/users/logout}">
+                        <input type="text" value="usuario" />
+                        <input type="text" value="contraseña" />
+                        <input type="submit" value="Sign in" />
+                    </form>
+                </li>
             </ul>
-
-            <form class="navbar-form navbar-right" method="post" th:action="@{/users/logout}">
-                <span>Hello, <b>(user)</b></span>
-                <button class="btn btn-default" type="submit"> Sign in</button>
-            </form>
-
-        </div>
     </div>
-
 
 </header>
 <footer th:fragment="site-footer">
