--- a/src/main/resources/templates/posts/view.html
+++ b/src/main/resources/templates/posts/view.html
@@ -1,21 +1,22 @@
 <!doctype html>
 <html xmlns:th="http//www.thymeleaf.org" lang="en">
 <head th:replace="layout::site-head">
-    <title th:text="${post.title}">Blog</title>
+    <title>Blog</title>
 </head>
 <body>
 
 <header th:replace="layout::site-header"/>
-
 <div class="container">
+    <!-- Blog Post -->
     <div class="col-lg-12">
+
         <!-- Title -->
         <h1 th:text="${post.title}">Post Title</h1>
 
         <!-- Author -->
-        <p class="lead" th:if="${post.author}">
+        <p class="lead">
             by
-            <a href="#" th:text="${post.author.fullName != null ? post.author.fullName : post.author.username}">
+            <a href="#" th:if="${post.author}" th:remove="tag" th:text="${post.author.fullName != null ? post.author.fullName : post.author.username}">
                 Start Bootstrap
             </a>
         </p>
@@ -32,10 +33,9 @@
         <p th:utext="${post.body}">Post Content</p>
 
         <hr />
+
     </div>
 </div>
-
-
 
 <footer th:replace="layout::site-footer"/>
 </body>
