--- a/src/main/resources/static/css/main.scss
+++ b/src/main/resources/static/css/main.scss
@@ -12,12 +12,13 @@ $avatar-size: 60px;
 
 body {
   background-color: $almost-white;
+  font: 100% $font-stack;
   margin: 0px;
   padding: 0px;
 }
 
 .container {
-    font: 100% $font-stack;
+    background-color: white;
     color: $almost-black;
     margin: 80px auto;
     max-width: $content-width;
