--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -12,7 +12,7 @@
 
     <div class="nav-bar">
             <ul>
-                <li><a href="index.html" th:href="@{/}"><img src="site-logo.png"/></a></li>
+                <li><a href="index.html" th:href="@{/}"><img th:src="@{site-logo.png}" width="45" height="35"/></a></li>
                 <li><a href="index.html" th:href="@{/}">Home</a></li>
                 <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
                 <li><a href="users/register.html" th:href="@{/users/register}">Register</a></li>
