--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,51 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="site-head">
-    <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-    <!--<link rel="stylesheet" href="../public/css/styles.css"/>-->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta th:include="this :: head" th:remove="tag" />
+    <link th:href="@{/wro4j/all.css}" rel="stylesheet"/>
     <meta th:include="this :: head" th:remove="tag"/>
 </head>
 <body>
 <header th:fragment="site-header">
 
-    <!-- Static navbar -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" th:href="@{/}">SPRING MVC BLOG</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html" th:href="@{/}">Home</a></li>
-                    <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
-                    <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
-                    <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
-                    <li><a href="users/index.html" th:href="@{/users}">Users</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li id="logged-in-info" class="active">Hello <b>(user)</b> <span class="sr-only">(current)</span></li>
-                    <form class="form-inline" method="post" th:action="@{/users/logout}">
-                        <div class="form-group">
-                            <button class="btn btn-default" type="submit"> Sign in </button>
-                        </div>
+    <div class="nav-bar">
+            <ul>
+                <li><a href="index.html" th:href="@{/}"><img th:src="@{site-logo.png}" width="45" height="35"/></a></li>
+                <li><a href="index.html" th:href="@{/}">Home</a></li>
+                <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
+                <li><a href="users/register.html" th:href="@{/users/register}">Register</a></li>
+                <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
+                <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
+                <li><a href="users/index.html" th:href="@{/users}">Users</a></li>
+                <li class="right">
+                    <form method="post" th:action="@{/users/logout}">
+                        <input type="text" value="usuario" />
+                        <input type="text" value="contraseña" />
+                        <input type="submit" value="Sign in" />
                     </form>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-    </nav>
-</header>
-
-<div class="panel panel-default" th:fragment="site-footer">
-    <div class="panel-footer">
-        &copy; Spring MVC Blog System, 2016
+                </li>
+            </ul>
     </div>
-</div>
+
+</header>
+<footer th:fragment="site-footer">
+    &copy; Spring MVC Blog System, 2016
+</footer>
 </body>
 </html>
