--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -22,6 +22,10 @@
             <!--<input type="submit" value="Login"/>-->
             <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
         </form>
+
+        <h3 th:if="${error}" th:text="${error}">
+            Mensaje De error
+        </h3>
         <br />
     </div>
 </div> <!-- /container -->
