crud de los post, completado

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta th:include="this :: head" th:remove="tag" />
-    <link th:href="@{/wro4j/all.css}" rel="stylesheet"/>
+    <link th:href="@{/wro4j/all.css}" rel="stylesheet" />
     <meta th:include="this :: head" th:remove="tag"/>
 </head>
 <body>
@@ -12,11 +12,11 @@
 
     <div class="nav-bar">
             <ul>
-                <li><a href="index.html" th:href="@{/}"><img th:src="@{site-logo.png}" width="45" height="35"/></a></li>
-                <li><a href="posts/index.html" th:href="@{/posts}">Posts</a></li>
-                <li><a href="posts/create.html" th:href="@{/posts/create}">Create Post</a></li>
-                <li><a href="users/login.html" th:href="@{/users/login}">Login</a></li>
-                <li><a href="users/register.html" th:href="@{/users/register}">Register</a></li>
+                <li><a href="#" th:href="@{/}"><img th:src="@{site-logo.png}" width="45" height="35"/></a></li>
+                <li><a href="#" th:href="@{/}">Posts</a></li>
+                <li><a href="#" th:href="@{/posts/create}">Create Post</a></li>
+                <li><a href="#" th:href="@{/users/login}">Login</a></li>
+                <li><a href="#" th:href="@{/users/register}">Register</a></li>
             </ul>
     </div>
 
