--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,9 @@
         <div class="col-lg-12" th:each="p : ${latest3posts}">
 
             <!-- Title -->
-            <h1 th:text="${p.title}">Post Title</h1>
+            <a href="#" th:href="|/posts/view/${p.id}|" >
+                <h1 th:text="${p.title}">Post Title</h1>
+            </a>
 
             <!-- Author -->
             <p class="lead">
