CRUD usuarios listo
App pide Login, quitar la dependencia
Spring-Boot-Security del POM y quitar el import de LoginController para
que la app corra de manera correcta.

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -9,6 +9,7 @@
 <div class="container">
 
     <form action="#" th:action="@{/posts/create}" th:object="${mPost}" method="post">
+        <p> Id del post : </p><p th:utext="${mPost.id}"></p>
         <input placeholder="titulo" type="text" th:field="*{title}" />
         <input placeholder="contenido" type="text" th:field="*{body}" />
         <input type="hidden" th:field="*{id}" />
