--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -9,27 +9,29 @@
 <header th:replace="layout::site-header"/>
 <div class="container">
     <div class="col-lg-4 col-lg-offset-4">
+        <h1>Register User</h1>
 
-        <form class="form-signin" method="post" th:object="${loginForm}">
+        <form class="form-signin" method="post" th:object="${registerUserForm}">
             <div><label for="username">Username:</label></div>
             <input id="username" type="text" name="username" th:value="*{username}" />
             <span th:if="${#fields.hasErrors('username')}"
                   th:errors="*{username}">Invalid username</span>
 
+            <div><label for="fullname" th:value="*{fullname}">FullName:</label></div>
+            <input id="fullname" type="text" name="fullname" th:value="*{fullname}" />
+            <span th:if="${#fields.hasErrors('fullname')}"
+                  th:errors="*{password}">Invalid password</span>
+
             <div><label for="password" th:value="*{username}">Password:</label></div>
             <input id="password" type="password" name="password" th:value="*{password}" />
             <span th:if="${#fields.hasErrors('password')}"
                   th:errors="*{password}">Invalid password</span>
+
             <br/>
             <!--<div><input type="submit" value="Login"/>-->
             <!--<a href="register.html" th:href="@{/users/register}">[Go to Register]</a></div>-->
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-            <a href="register.html" th:href="@{/users/register}">[Go to Register]</a>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
         </form>
-
-
-
-
 
         <h3 th:if="${error}" th:text="${error}">
             Mensaje De error
