--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -6,17 +6,65 @@
 <body>
 
 <header th:replace="layout::site-header"/>
-<div class="container">
+<div class="container is-fluid">
 
-    <form action="#" th:action="@{/posts/create}" th:object="${mPost}" method="post">
-        <p> Id del post : </p><p th:utext="${mPost.id}"></p>
-        <input placeholder="titulo" type="text" th:field="*{title}" />
-        <input placeholder="contenido" type="text" th:field="*{body}" />
-        <input type="hidden" th:field="*{id}" />
-        <input type="submit" value="Submit" />
-        <input type="reset" value="Reset" />
-    </form>
+    <div class="columns is-mobile is-centered">
+        <div class="column is-half is-narrow">
+            <br/>
+            <br/>
+            <form action="#" th:action="@{/posts/create}" th:object="${mPost}" method="post">
 
+                <div class="field is-horizontal">
+                    <div class="field-label is-normal">
+                        <label class="label">Id del post :</label>
+                    </div>
+                    <div class="field-body">
+                        <label class="label" th:utext="${mPost.id}"></label>
+                    </div>
+                </div>
+
+                <div class="field is-horizontal">
+                    <div class="field-label is-medium">
+                        <label class="label">Titulo :</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <input class="input is-medium" type="text" th:field="*{title}"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field is-horizontal">
+                    <div class="field-label is-medium">
+                        <label class="label">Contenido :</label>
+                    </div>
+                    <div class="field-body">
+                        <div class="field">
+                            <div class="control">
+                                <textarea class="textarea" rows="10" th:field="*{body}"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field is-grouped is-grouped-right">
+                    <p class="control">
+                        <input type="hidden" th:field="*{id}"/>
+                    </p>
+                    <p class="control">
+                        <input class="button is-light" type="reset" value="Reset"/>
+                    </p>
+                    <p class="control">
+                        <input class="button is-primary" type="submit" value="Submit"/>
+                    </p>
+                </div>
+            </form>
+            <br/>
+            <br/>
+        </div>
+    </div>
 </div>
 
 <footer th:replace="layout::site-footer"/>
