--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -42,7 +42,7 @@
 <footer th:fragment="site-footer" class="footer">
     <div class="container">
         <div class="content has-text-centered">
-            <p>&copy; Spring MVC Blog System, 2017</p>
+            <p>&copy; Spring MVC Blog, 2017</p>
         </div>
     </div>
 </footer>
