--- a/src/main/resources/templates/posts/view.html
+++ b/src/main/resources/templates/posts/view.html
@@ -1,17 +1,21 @@
 <!doctype html>
-<html xmlns:th="http//www.thymeleaf.org" lang="en">
+<html xmlns:th="http//www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head th:replace="layout::site-head">
     <title>Blog</title>
 </head>
 <body>
 
 <header th:replace="layout::site-header"/>
-<div class="container">
+
+<div class="container desktop">
+    <br/>
+    <br/>
     <!-- Blog Post -->
-    <div class="col-lg-12">
+    <div class="content">
 
         <!-- Title -->
-        <h1 th:text="${post.title}"></h1>
+        <h1 class="title" th:text="${post.title}"></h1>
 
         <!-- Author -->
         <p class="lead">
@@ -20,9 +24,6 @@
                 Start Bootstrap
             </a>
         </p>
-
-        <hr />
-
         <!-- Date/Time -->
         <p><span class="glyphicon glyphicon-time"></span> Posted on <b th:text="${#dates.format(post.date, 'dd-MMM-yyyy')}">24, 2013 at 9:00 PM</b></p>
 
@@ -33,8 +34,10 @@
         <p th:utext="${post.body}">Post Content</p>
 
         <hr />
-        <a href="#" th:href="|/posts/edit/${post.id}|">Editar</a>
-        <a href="#" th:href="|/posts/delete/${post.id}|">Eliminar</a>
+        <div sec:authorize="isAuthenticated()">
+            <a href="#" th:href="|/posts/edit/${post.id}|">Editar</a>
+            <a href="#" th:href="|/posts/delete/${post.id}|">Eliminar</a>
+        </div>
     </div>
 </div>
 
